--- a/doc/antora.yml
+++ b/doc/antora.yml
@@ -1,4 +1,3 @@
-name: active-directory-authentication    # a brief module name. This will be included in the guide url.
+name: active-directory-authentication
 title: Active Directory authentication in Hazelcast
 version: master
-
